--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello I’m Claudia Encinas</h1>
+<img src="http://en.spongepedia.org/images/6/65/FrauNipperchen.jpg" alt="my photo" />
+<h2> Business professional graduated from Tecnológico de Monterrey with +5 years of marketing experience. </h2>b2>
+    I help you find and connect with your ideal clients through digital and inbound strategies. <br>
+    I have creative skills as well as analytical skills that allow me to formulate the most accurate strategies for the growth of your company. </p>
+
+    <a href="https://www.linkedin.com/in/claudiaencinasm/" target="_blank">My linkedIn profile</a>
+
+
 </body>
 </html>
